--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@react-navigation/native-stack": "^6.9.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~49.0.13",
+    "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-file-system": "~15.4.4"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
