--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~49.0.13",
     "expo-file-system": "~15.4.4",
